manifests-successful/gcloud-sqlproxy-0.25.6.tgz-manifest.yaml
---
# Source: gcloud-sqlproxy/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: "my-release-gcloud-sqlproxy"
  labels:
    helm.sh/chart: gcloud-sqlproxy-0.25.6
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.6.0"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gcloud-sqlproxy
      app.kubernetes.io/instance: my-release
  ingress:
    # Allow inbound connections
    - ports:
      - port: 5432
      from:
          []
---
# Source: gcloud-sqlproxy/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-gcloud-sqlproxy
  annotations:
  labels:
    helm.sh/chart: gcloud-sqlproxy-0.25.6
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.6.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: insta-c3bec6bcb
    protocol: TCP
    port: 5432
    targetPort: insta-c3bec6bcb
  selector:
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: my-release
